# home-cloud

./: .gitignore  Cargo.toml  proxy.sh
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  config.ts  configureStore.tsx  index.tsx  utils.ts
client/src/components/: Hello.tsx  HelloChild.tsx  NavBar.scss  NavBar.tsx  Surveillance.tsx
client/src/components/Authentication/Login/: Login.scss  Login.tsx  action.ts  data.ts  index.ts  reducer.ts
client/src/reducers/: auth.ts  index.ts
client/src/routes/: PrivateRoute.tsx  index.tsx
client/src/store/: index.ts
client/src/store/auth/: actions.ts  index.ts  reducers.ts
client/src/store/session/: actions.ts  reducers.ts
proxy/: nginx.conf
server/: Cargo.toml
server/src/: constants.rs  main.rs  user.rs
server/src/middleware/: authen_middleware.rs
server/src/models/: user.rs
src/: main.rs  user.rs
