[package]
name = "homeCloud"
version = "0.1.0"
authors = ["Steve Sloan <steve@stevesloan.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
diesel = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
